dpkg (1.18.8) UNRELEASED; urgency=medium

  [ Guillem Jover ]
  * Do not disable PIE buildflags on */kFreeBSD anymore. Closes: #823877
    Thanks to Steven Chamberlain <steven@pyro.eu.org>.
  * Add new long options in dpkg-buildpackage for any short option that is
    a useful configurable candidate.
  * Perl modules:
    - Use warnings::warnif() instead of carp() for deprecated warnings.
    - Add new format_range() method and deprecate dpkg() and rfc822() methods
      in Dpkg::Changelog.
    - Replace changelog program parsers with perl modules.
    - Add a getter for the Time::Piece object in Dpkg::Changelog.
    - Add new Timestamp field to Dpkg::Changelog output, which ends up on
      dpkg-parsechangelog's output.
    - Validate source version in set_version_substvars()'s Dpkg::Substvars
      method.
    - Revert "Dpkg::Conf: Switch implementation to be hash based", as this
      change broke backwards compatibility in multiple ways. The format_argv
      option was set by default, the order was not preserved, which was
      important for dpkg.cfg files, and duplicate option names stopped being
      supported. Add regression tests to avoid similar changes in the future.
      Closes: #824938
    - Add support for system and user config loading in Dpkg::Conf.
  * Test suite:
    - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
      to 99999.
  * Documentation:
    - Improve dpkg-buildpackage(1) on environment expectations.
    - Clarify the format of the db:Status-Abbrev virtual field in
      dpkg-query(1). Closes: #824515
    - Document the tar entry size limitation for deb(5) format.
    - Document interaction between PIE and libraries in dpkg-buildflags(1).
      Based on text by Christian Seiler <christian@iwakd.de>.
    - Merge ENVIRONMENT sections in dpkg-buildflags(1).
    - Document various long options in dpkg-source --help output.
    - Move dpkg-source -q option from “Build options” to “General options”