@@ -5,6 +5,9 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
     Thanks to Steven Chamberlain <steven@pyro.eu.org>.
   * Add new long options in dpkg-buildpackage for any short option that is
     a useful configurable candidate.
+  * Add configuration file support to dpkg-buildpackage, as buildpackage.conf
+    under either the dpkg system or user configuration directories.
+    Closes: #539692, #765494
   * Perl modules:
     - Use warnings::warnif() instead of carp() for deprecated warnings.
     - Add new format_range() method and deprecate dpkg() and rfc822() methods
